@@ -4,7 +4,25 @@
 # Whereas:
 # - azul/zulu-openjdk-alpine:17-jre-headless is 64.28 MB compressed
 # - gcr.io/distroless/java17:latest is 81.7 MB compressed
-FROM azul/zulu-openjdk-alpine:17-jre-headless as production
+FROM openjdk:17-alpine as build-jre
+
+RUN jlink \
+      --verbose \
+      --compress 2 \
+      --no-header-files \
+      --no-man-pages \
+      --output jre \
+      --add-modules java.base,java.desktop,java.instrument,java.logging,java.management,java.naming,java.sql \
+      # Required by Tomcat
+      --add-modules java.security.jgss \
+      # Required by Objenesis used by Spring AOP
+      --add-modules jdk.unsupported \
+      # Required for EC-based crypto used by TLS
+      --add-modules jdk.crypto.ec \
+      # Required by micrometer-core used by Spring Actuator
+      --add-modules jdk.management
+
+FROM alpine:latest as production
 
 # Curl is used in healthcheck.
 RUN apk --no-cache add curl
@@ -14,6 +32,10 @@ RUN addgroup -S nonroot && \
     mkdir -p /app && \
     chown nonroot:nonroot /app
 USER nonroot:nonroot
+
+COPY --from=build-jre /jre /jre
+ENV JAVA_HOME=/jre
+ENV PATH="$PATH:$JAVA_HOME/bin"
 
 COPY ./entrypoint.sh /app
 COPY ./build/libs/application.jar /app
